--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,10 @@
-site_name: Mootdx 
+site_name: Mootdx
 site_description: 基于 pytdx 数据接口的二次封装
 
-theme: readthedocs
+theme: material
 
 pages:
-  - 快速开始: 
+  - 快速开始:
     - 项目概述: 'index.md'
     - 快速安装: 'setup.md'
     - 选择线路: 'quickstart.md'
